--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -1,1 +1,5 @@
 /* Empty CSS file please update and fill in as needed for your project. */
+h3 {
+    font-weight: bold;
+    text-decoration: underline;
+}
